--- a/index.html
+++ b/index.html
@@ -8,26 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
-<script>
-    window.addEventListener("DOMContentLoaded", ()=>{
-      VANTA.BIRDS({
-  el: "#vanta",
-  mouseControls: true,
-  touchControls: true,
-  gyroControls: false,
-  minHeight: 200.00,
-  minWidth: 200.00,
-  scale: 1.00,
-  scaleMobile: 1.00,
-  backgroundAlpha:0.0,
-  birdSize: 0.80,
-  wingSpan: 15.00,
-  separation: 50.00,
-  alignment: 23.00,
-  cohesion: 40.00
-})
-
-    })
+<script src="./vantaBirds.js">
 </script>
     <title>edapess links</title>
     
@@ -39,9 +20,12 @@
         <div class="image-wrapper">
           <img class="profile-pic" src="./assets/edapeBack.png"/>
         </div>
+              <h3>Edmond Avetisyan</h3>
+    <h5>React Native developer</h5>
+
       </div>
       <div class="links-wrapper">
-        <ul class="link-item-container fa-ul">
+        <ul class="link-item-container">
         
           <li class="link-item">
           <i class="fa-brands fa-instagram fa-2x"></i>
