--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     <h5>React Native developer</h5>
 
       </div>
+                <div class="lines-wrapper">
+          <div class="line"></div>
+          <div class="line line-mid"></div>
+          <div class="line  line-bot"></div>
+        </div>
+
       <div class="links-wrapper">
         <ul class="link-item-container">
         
