--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
           <li class="link-item">
             <i class="fa-brands fa-gitlab fa-2x"></i>
-            <a href="https://gitlab.com/edavetisyan"> GitLab </a>
+            <a href="https://gitlab.com/eda7453"> GitLab </a>
           </li>
 
           <li class="link-item">
