--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="stylesheet" href="./styles.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
-    <script src="./vantaBirds.js"></script>
     <title>edapess links</title>
   </head>
   <div id="vanta"></div>
@@ -19,7 +16,7 @@
           <img class="profile-pic" src="./assets/edapeBack.png" />
         </div>
         <h3>Edmond Avetisyan</h3>
-        <h5>React Native developer</h5>
+        <h5>React Native Engineer</h5>
       </div>
       <div class="lines-wrapper">
         <div class="line"></div>
@@ -29,9 +26,10 @@
 
       <div class="links-wrapper">
         <ul class="link-item-container">
+
           <li class="link-item">
-            <i class="fa-brands fa-instagram fa-2x"></i>
-            <a href="https://www.instagram.com/_edapess"> Instagram </a>
+            <i class="fa-brands fa-linkedin fa-2x"></i>
+            <a href="https://www.linkedin.com/in/edmondavetisyan/"> Linkedin </a>
           </li>
 
           <li class="link-item">
@@ -47,6 +45,10 @@
           <li class="link-item">
             <i class="fa-brands fa-twitch fa-2x"></i>
             <a href="https://www.twitch.tv/edapess"> Twitch </a>
+          </li>
+          <li class="link-item">
+            <i class="fa-brands fa-instagram fa-2x"></i>
+            <a href="https://www.instagram.com/_edapess"> Instagram </a>
           </li>
         </ul>
       </div>
